--- a/public/styles/vertical-nav.css
+++ b/public/styles/vertical-nav.css
@@ -5,4 +5,46 @@
     width: 300px;
     height: 100%;
     background-color: #080808;
+
+    .top-triangle {
+        position: relative;
+        width: 100%;
+        height: 100px;
+        clip-path: polygon(0 0, 100% 0, 0 100%);
+        background-color: #3BFFC5;
+        z-index: -1;
+    }
+
+    .info {
+        text-align: center;
+        margin-top: -85px;
+    }
+
+    .icon {
+        width: 96px;
+        image-rendering: pixelated;
+    }
+
+    h5 {
+        font-family: "Handjet", serif;
+        color: white;
+        margin: 0;
+        font-weight: 300;
+        font-size: 3em;
+    }
+
+    .nav-footer {
+        position: absolute;
+        bottom: 10px;
+        width: 100%;
+        text-align: center;
+        color: white;
+        font-family: "Cabin", sans-serif;
+    }
+
+    .copyrights {
+        font-size: 0.6em;
+        color: #a1a1a1;
+    }
 }
+
