--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -20,7 +20,7 @@
   width: 90vw;
   height: 100%;
   clip-path: polygon(0 0, 100% 0, 100% 100%, 60vw 100%);
-  background-image: url("../img/home/hero-visual-test.png");
+  background-image: url("/img/home/hero-visual-test.png");
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -1;
