--- a/src/styles/vertical-nav.css
+++ b/src/styles/vertical-nav.css
@@ -5,6 +5,7 @@
     width: 300px;
     height: 100%;
     background-color: #080808;
+    box-shadow: 0px 0px 0px 16px rgba(8,8,8,0.5), 0px 0px 0px 8px rgba(8,8,8,0.5);
 
     .top-triangle {
         position: relative;
@@ -42,9 +43,15 @@
         font-family: "Cabin", sans-serif;
     }
 
+
+    .socials {
+        visibility: hidden;
+    }
+
     .copyrights {
         font-size: 0.6em;
         color: #a1a1a1;
     }
+
 }
 
