--- a/src/styles/vertical-nav.css
+++ b/src/styles/vertical-nav.css
@@ -70,5 +70,15 @@
         color: #a1a1a1;
     }
 
+    .button-container {
+        width: 100%;
+    }
+
+    .button {
+        width: 100%;
+        height: 50px;
+        color: black;
+    }
+
 }
 
