--- a/src/views/home-view/styles.css
+++ b/src/views/home-view/styles.css
@@ -1,10 +1,10 @@
-.home-page {
+body {
   background: #141518;
   height: 100%;
   margin: 0;
 }
 
-.home-page .corner-triangle {
+.corner-triangle {
   position: absolute;
   top: 0;
   left: 0;
@@ -13,7 +13,7 @@
   border-top: 55vh solid #3BFFC5;
 }
 
-.home-page .hero-visual {
+.hero-visual {
   position: absolute;
   top: 0;
   right: 0;
@@ -26,11 +26,11 @@
   z-index: -1;
 }
 
-.home-page .main-title {
+.main-title {
   position: relative;
 }
 
-.home-page .main-title h3 {
+.main-title h3 {
   font-size: 12vw;
   font-family: "Cabin", sans-serif;
   color: white;
@@ -40,40 +40,40 @@
   text-shadow: 0px 0px 22px black;
 }
 
-.home-page .business-card {
+.business-card {
   position: absolute;
   bottom: 10vh;
   left: 5vw;
   width: 33vw;
 }
 
-.home-page .business-card img {
+.business-card img {
   float: left;
   width: 10vw;
   image-rendering: pixelated;
 }
 
-.home-page .business-card article {
+.business-card article {
   float: left;
   color: white;
   font-family: "Handjet", serif;
   margin: 1.2vw 0 0 2vw;
 }
 
-.home-page .business-card article h2 {
+.business-card article h2 {
   font-size: 2vw;
   font-weight: 700;
   margin: 0px;
 }
 
-.home-page .business-card article h1 {
+.business-card article h1 {
   font-size: 5vw;
   font-weight: 300;
   margin: 0vw 0 0 0;
 }
 
 
-.home-page footer {
+footer {
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -81,14 +81,14 @@
   background: #000;
 }
 
-.home-page footer .logs-title {
+footer .logs-title {
   float: left;
   background: white;
   height: 100%;
   text-transform: uppercase;
 }
 
-.home-page footer .logs-title h6 {
+footer .logs-title h6 {
   color: #000;
   font-family: "Handjet", serif;
   font-size: 1em;
