--- a/src/components/vertical-nav/styles.css
+++ b/src/components/vertical-nav/styles.css
@@ -7,7 +7,7 @@
     background-color: #080808;
     box-shadow: 0px 0px 0px 16px rgba(8,8,8,0.5), 0px 0px 0px 8px rgba(8,8,8,0.5);
 
-    .nav-wrapper {
+    #nav-wrapper {
         width: 230px;
         margin: 0 auto;
     }
