--- a/src/views/utils/styles.css
+++ b/src/views/utils/styles.css
@@ -1,11 +1,11 @@
-﻿#content-page {
+﻿#view-box {
     padding-left: 300px;
     height: 100%;
     background-color: #000;
     font-family: "Cabin", sans-serif;
 
 
-    #wrapper {
+    #view-wrapper {
         width: 720px;
         margin: 0 auto;
         padding-top: 100px;
