--- a/src/components/breadcrumbs/styles.css
+++ b/src/components/breadcrumbs/styles.css
@@ -1,10 +1,11 @@
 ﻿.breadcrumbs {
     list-style-type: none;
-    margin: 0;
+    margin: 10px 0 30px 0;
     padding: 0;
 
     ul {
         list-style-type: none;
+        text-align: center;
         margin: 0;
         padding: 0;
     }
