--- a/src/components/vertical-nav/styles.css
+++ b/src/components/vertical-nav/styles.css
@@ -12,7 +12,7 @@
         margin: 0 auto;
 
         section {
-            padding: 60px 0 0 0;
+            padding: 0 0 30px 0;
 
             h4 {
                 font-family: "Cabin", sans-serif;
@@ -20,7 +20,7 @@
                 text-transform: uppercase;
                 font-weight: bold;
                 font-size: 1em;
-                margin: 0 0 20px 0;
+                margin: 0 0 15px 0;
                 padding: 0;
             }
 
@@ -28,13 +28,15 @@
                 list-style-type: none;
                 padding: 0;
                 margin: 0;
+                list-style-position: inside;
             }
 
             li {
                 display: block;
-                line-height: 180%;
+                line-height: 150%;
                 font-family: "handjet", serif;
-                font-size: 1em;
+                font-size: 1.1em;
+                font-weight: 500;
                 color: white;
             }
 
