wip: background dotted test

--- a/src/views/home-view/styles.css
+++ b/src/views/home-view/styles.css
@@ -1,5 +1,7 @@
 body {
   background: #141518;
+  background-image: url("./background-test.png");
+  background-attachment: fixed;
   height: 100%;
   margin: 0;
 }
