--- a/src/views/utils/styles.css
+++ b/src/views/utils/styles.css
@@ -1,7 +1,6 @@
 ﻿#view-box {
     padding-left: 300px;
     height: 100%;
-    background-color: #000;
     font-family: "Cabin", sans-serif;
 
 
@@ -102,6 +101,30 @@
             color: #A1A1A1;
             font-size: 0.9em;
         }
+    }
+
+    .backgrounds {
+        position: fixed;
+        background-color: #141518;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -15;
+
+        .layer-a {
+            position: fixed;
+            background-image: url("./assets/background-test.png");
+            width: 100%;
+            height: 100%;
+            z-index: -11;
+        }
+
+        .layer-b {
+            position: relative;
+            z-index: -10;
+        }
+
     }
 }
 
