--- a/src/views/styles.css
+++ b/src/views/styles.css
@@ -1,4 +1,8 @@
-﻿#view-box {
+﻿body {
+    background-color: black;
+}
+
+#view-box {
     padding-left: 280px;
     height: 100%;
     font-family: "Cabin", sans-serif;
@@ -9,6 +13,10 @@
         margin: 0 auto;
         padding-top: 60px;
 
+        section {
+            margin:0;
+            padding: 58px 0;
+        }
 
         .showcase {
             margin: 50px 0;
@@ -22,7 +30,7 @@
             width: 100%;
             padding-top: 65px;
             z-index: -2;
-            background-image: url("./assets/video-showcase-decoration.png");
+            background-image: url("utils/assets/video-showcase-decoration.png");
             background-blend-mode: multiply;
             background-repeat: repeat-x;
             filter: invert(100%) sepia(100%) hue-rotate(240deg) saturate(100%);
@@ -114,7 +122,7 @@
 
         .layer-a {
             position: fixed;
-            background-image: url("./assets/background-test.png");
+            background-image: url("utils/assets/background-test.png");
             width: 100%;
             height: 100%;
             z-index: -11;
