--- a/src/components/vertical-nav/styles.css
+++ b/src/components/vertical-nav/styles.css
@@ -53,6 +53,20 @@
             padding: 20px 15px;
         }
 
+        canvas {
+            width: 100%;
+            height: 100%;
+            border-radius: 5px;
+        }
+
+        canvas:hover {
+            cursor: pointer;
+        }
+
+        canvas:active {
+            cursor: grabbing;
+        }
+
 
         section {
             padding: 10px 0;
