chore: consistency between project contents and labels

--- a/src/components/vertical-nav/styles.css
+++ b/src/components/vertical-nav/styles.css
@@ -39,6 +39,7 @@
             margin: 0;
             font-weight: 300;
             font-size: 3em;
+            text-transform: uppercase;
         }
     }
 
