--- a/src/views/styles.css
+++ b/src/views/styles.css
@@ -29,6 +29,7 @@ h5 {
     font-family: "Handjet", serif;
     font-size: 1.5em;
     font-weight: 600;
+    text-transform: lowercase;
     color: #828282;
 }
 
