--- a/src/components/thumbnail-project/styles.css
+++ b/src/components/thumbnail-project/styles.css
@@ -5,12 +5,12 @@
     padding: 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 #thumbnail-box {
     width: 32%;
-    margin-bottom: 2%;
+    margin: 0 1% 2% 0;
     height: 275px;
     color: white;
     overflow: hidden;
