--- a/src/components/thumbnail-project/styles.css
+++ b/src/components/thumbnail-project/styles.css
@@ -3,14 +3,12 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 2%;
 }
 
 #thumbnail-box {
-    width: 32%;
-    margin: 0 1% 2% 0;
     height: 275px;
     color: white;
     overflow: hidden;
@@ -18,11 +16,12 @@
     box-sizing: border-box;
     padding: 30px 25px;
     border-radius: 10px;
+    grid-column: span 2;
 }
 
 #thumbnail-box:nth-child(1),
 #thumbnail-box:nth-child(2) {
-    width: 49%;
+    grid-column: span 3;
     height: 350px;
 
     h5 {
