--- a/src/components/vertical-nav/styles.css
+++ b/src/components/vertical-nav/styles.css
@@ -43,6 +43,38 @@
         }
     }
 
+    .nav-links {
+        list-style-type: none;
+        margin: 10px 0 30px 0;
+        padding: 0;
+        text-transform: lowercase;
+
+        ul {
+            list-style-type: none;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        li {
+            display: inline-block;
+            margin: 0 5px;
+            line-height: 210%;
+            color: white;
+            font-family: "handjet", serif;
+        }
+
+        li a {
+            font-family: "handjet", serif;
+            font-weight: 700;
+            text-decoration: none;
+            color: black;
+            padding: 4px 6px;
+            margin-right: 5px;
+
+        }
+    }
+
     #nav-info {
         margin-top: 20px;
         width: 100%;
