wip: almost done with about content

--- a/src/views/styles.css
+++ b/src/views/styles.css
@@ -135,6 +135,52 @@ p.description {
             text-align: center;
             text-decoration-color: #3BFFC5;
         }
+
+        #about-page {
+
+            .intro {
+                text-align: center;
+                padding-bottom: 50px;
+                display: block;
+            }
+
+            .grid-section {
+
+                .grid-category {
+                    display: grid;
+                    padding: 50px 0 0 0;
+                    margin: 0 0 25px 0;
+                    border-top: 2px dashed #505050;
+                    grid-template-columns: repeat(6, 1fr);
+                    gap: 2%;
+
+                    h2 {
+                        grid-column: span 6;
+                    }
+
+                    .grid-item {
+                        margin: 0 0 50px 0;
+                        grid-column: span 3;
+
+                        .title {
+                            font-family: "Handjet", serif;
+                            font-size: 2.5em;
+                            font-weight: 600;
+                            color: #3BFFC5;
+                            text-transform: lowercase;
+                        }
+
+                        .subtitle {
+                            color: white;
+                        }
+
+                        .text {
+                            font-size: 1em;
+                        }
+                    }
+                }
+            }
+        }
     }
 
     .three-background {
