--- a/src/views/styles.css
+++ b/src/views/styles.css
@@ -33,6 +33,15 @@ h5 {
     color: #828282;
 }
 
+h6 {
+    margin: 0 0 20px 0;
+    font-family: "Handjet", serif;
+    font-size: 2em;
+    font-weight: 600;
+    text-transform: lowercase;
+    color: #3BFFC5;
+}
+
 p {
     font-size: 2em;
     font-weight: normal;
@@ -116,7 +125,7 @@ p.description {
             border-radius: 10px;
         }
 
-        .credits a {
+        .link {
             font-family: "Handjet", serif;
             display: inline-block;
             color: #828282;;
@@ -125,6 +134,61 @@ p.description {
             padding: 0 30px 15px 0;
             text-align: center;
             text-decoration-color: #3BFFC5;
+        }
+
+        #about-page {
+
+            .intro {
+                text-align: center;
+                padding-bottom: 50px;
+                display: block;
+            }
+
+            .title {
+                font-family: "Handjet", serif;
+                font-size: 2.5em;
+                font-weight: 600;
+                color: #3BFFC5;
+                text-transform: lowercase;
+            }
+
+            .grid-category {
+                display: grid;
+                padding: 50px 0 0 0;
+                margin: 0 0 25px 0;
+                border-top: 2px dashed #505050;
+                grid-template-columns: repeat(6, 1fr);
+                gap: 2%;
+
+                h2 {
+                    grid-column: span 6;
+                }
+
+                .grid-item {
+                    margin: 0 0 50px 0;
+                    grid-column: span 3;
+
+
+                    .subtitle {
+                        color: white;
+                    }
+
+                    .text {
+                        font-size: 1em;
+                    }
+                }
+            }
+
+            .achievements, .profile-links {
+                border-top: 2px dashed #505050;
+                padding: 50px 0 0 0;
+                margin: 0 0 25px 0;
+
+                .item {
+                    margin: 0 0 50px 0;
+                }
+            }
+
         }
     }
 
