--- a/src/components/logo/styles.css
+++ b/src/components/logo/styles.css
@@ -11,6 +11,7 @@
     }
 
     p {
+        margin-top: 9px;
         text-align: center;
         text-transform: uppercase;
         font-family: "Handjet", sans-serif;
