--- a/src/views/styles.css
+++ b/src/views/styles.css
@@ -22,6 +22,13 @@
         .hook {
             h1, p {
                 text-shadow: 0 4px 55px rgba(0, 0, 0, 0.65);
+                max-width: 1160px;
+
+                .highlight {
+                    text-decoration: underline;
+                    text-decoration-color: #3BFFC5;
+                    text-underline-offset: 20px;
+                }
             }
 
             article {
