wip: changing home page img for video

--- a/src/views/about/styles.css
+++ b/src/views/about/styles.css
@@ -24,10 +24,10 @@
     }
 
     img {
-        width: 75%;
+        width: 45%;
         position: absolute;
         bottom: 0;
-        left: 0;
+        left: 5%;
         z-index: 2;
     }
 }
