--- a/src/views/home/styles.css
+++ b/src/views/home/styles.css
@@ -9,6 +9,10 @@
         height: 100vh;
     }
 
+    .video-background {
+        z-index: -1;
+    };
+
     .hook {
         h1, p {
             text-shadow: 0 4px 55px rgba(0, 0, 0, 0.65);
@@ -24,6 +28,7 @@
             align-items: center;
             height: 100vh;
             padding: 0;
+            z-index: 2; 
 
             p {
                 font-size: clamp(1.1em, 3vw, 1.5em);
@@ -50,6 +55,7 @@
         
         article {
             height: 100vh;
+            z-index: 2; 
         }
 
         .buttons-container {
