--- a/src/views/about/styles.css
+++ b/src/views/about/styles.css
@@ -20,14 +20,24 @@
     }
 
     section {
-        padding: 160px 0; 
+        padding: 160px 0;
+        position: relative; /* Make section the positioning context for images */
+
+        .scroll-video-background {
+            height: 100%;
+        }
     }
 
     img {
         width: 45%;
         position: absolute;
-        bottom: 0;
+        top: 0;
         left: 5%;
         z-index: 2;
+    }
+
+    section.left img {
+        left: auto;
+        right: 5%;
     }
 }
