--- a/src/views/home/styles.css
+++ b/src/views/home/styles.css
@@ -24,6 +24,7 @@
             align-items: center;
             height: 100vh;
             padding: 0;
+            z-index: 2; 
 
             p {
                 font-size: clamp(1.1em, 3vw, 1.5em);
@@ -50,6 +51,7 @@
         
         article {
             height: 100vh;
+            z-index: 2; 
         }
 
         .buttons-container {
