--- a/src/views/about/styles.css
+++ b/src/views/about/styles.css
@@ -31,7 +31,7 @@
     img {
         width: 45%;
         position: absolute;
-        top: 0;
+        bottom: 0;
         left: 5%;
         z-index: 2;
     }
