--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,6 +17,7 @@
 @import './components/logo.css';
 @import './components/navigation.css';
 @import './components/call-to-action.css';
+@import './components/thumbnails.css';
 
 /* Pages - Page-specific styles */
 @import './pages/home.css';
